Resolve overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,4 @@
 html, body, #root {
-    height: 100vh;
     margin: 0;
     padding: 0;
     position: relative;
